--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.1",
+    "react-netlify-forms": "^1.3.3",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
