--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 /*.env*/
 REACT_APP_SECRET_KEY = "6LeVYd4iAAAAAOVnw_tcUmihQDdbgXkATU_t6qMa"
 REACT_APP_SITE_KEY = "6LeVYd4iAAAAAN4tNhV_RTVfEO8XJpc0k-D7b9JH"
+REACT_APP_API_URL = "https://jlzkdev.netlify.app/"
